TAG: qcreports_db-6-0-22-53
DATE: 06/27/2023
STAFF: jer
wts2-1177/fl2-412 Add fields to extracted text custom report.

TAG: qcreports_db-6-0-22-52
DATE: 06/14/2023
STAFF: lec
wts2-1210/fl2-411/GXD QC: add another excluded assay type

TAG: qcreports_db-6-0-22-51
TAG: qcreports_db-6-0-22-50
DATE: 06/12/2023
STAFF: lec
wts2-1208/fl2-402/add PMID id to GXD HT Experiment Note Search
pwi/GXD_HTExperimentByNote.py

TAG: qcreports_db-6-0-22-49
DATE: 06/08/2023
STAFF: jer
wts2-1195/fl2-399/Custom report alleles with "mut =" in Nomenclature note

TAG: qcreports_db-6-0-22-48
DATE: 06/08/2023
STAFF: dbm
wts2-1201/fl2-400/Various QC report changes (retire, change frequency, reorder)

TAG: qcreports_db-6-0-22-47
DATE: 05/30/2023
STAFF: lec
wts2-1194/fl2-385/Adding columns to Strain Check by Strain Nomenclature report
PRB_StrainNomenCheck.py

TAG: qcreports_db-6-0-22-46
DATE: 05/24/2023
STAFF: lec
wts2-1187/fl2-362/Missing driver QC report
wts2-1190/fl2-465/new custom report: GXD Assay Note Search

TAG: qcreports_db-6-0-22-45
TAG: qcreports_db-6-0-22-44
DATE: 05/23/2023
STAFF: lec
wts2-1185/fl2-355/Variant Curation Activity Report

TAG: qcreports_db-6-0-22-43
DATE: 05/12/2023
STAFF: lec
wts2-1132/fl2-343/Define MGI staff contacts for unassigned Sequence Group QC reports

TAG: qcreports_db-6-0-22-42
DATE: 05/12/2023
STAFF: lec
wts2-1115/fl2-206/QC reports/wiki/etc. changes due to retiring in MGI (part 2)

TAG: qcreports_db-6-0-22-41
DATE: 05/09/2023
STAFF: lec
wts2-1171/fl2-335/new custom report: GXD Specimen Note Search

TAG: qcreports_db-6-0-22-40
DATE: 04/26/2023
STAFF: sc
wts2-1050/Florida Too Project

TAG: qcreports_db-6-0-22-39
DATE: 04/11/2023
STAFF: dbm
fl2-278/Clean up bhmgiapp14ld (scrum server) /data/downloads (includes Test and Prod)
qcr.html: removed gensatload link (retired)

TAG: qcreports_db-6-0-22-38
DATE: 03/01/2023
STAFF: lec
wts2-1093/fl2-233/Missing DOI QC report
weekly/BIB_MissingDOI.sql

TAG: qcreports_db-6-0-22-37
TAG: qcreports_db-6-0-22-36