@@ -28,7 +28,13 @@ t2.term as experimenttype,
 rs.accid as SampleID, 
 t.term as relevance, 
 string_agg(distinct kv.key, ', ') as keys, 
-string_agg(distinct kv.value, ', ') as values 
+string_agg(distinct kv.value, ', ') as values,
+case 
+        when t.term = 'Predicted Yes' then 1 
+        when t.term = 'Predicted No' then 2 
+        when t.term = 'Yes' then 3 
+        when t.term = 'No' then 4 
+end as relevanceOrder
 from gxd_htrawsample rs, 
      mgi_keyvalue kv, 
      gxd_htexperiment e, 
